force-app/main/default/objects/Product2/fields/a4x_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>a4x_Product_Category__c</fullName>
    <formula>BLANKVALUE(TEXT(Reporting_Category__c),&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x Product Category</label>
    <type>Text</type>
</CustomField>