force-app/main/default/objects/Product2/fields/a4x_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>a4x_Product_Status__c</fullName>
    <formula>BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Successor_Product__r.Product_Status__c),NULL),
BLANKVALUE(IF(Successor_Product__r.ProductCode = ProductCode,TEXT(Successor_Product__r.Product_Status__c),NULL),
TEXT(Product_Status__c)

))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x Product Status</label>
    <type>Text</type>
</CustomField>