force-app/main/default/objects/Product2/fields/Abacus_Konditionsnummer_101__c.field-meta.xml
<CustomField>
    <fullName>Abacus_Konditionsnummer_101__c</fullName>
    <label>Abacus Konditionsnummer 101</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>