force-app/main/default/objects/Product2/fields/Abacus_Konditionsnummer_103__c.field-meta.xml
<CustomField>
    <fullName>Abacus_Konditionsnummer_103__c</fullName>
    <label>Abacus Konditionsnummer 103</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>