force-app/main/default/objects/Product2/fields/Allocation_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Product under Allocation</label>
    <type>Checkbox</type>
</CustomField>