force-app/main/default/objects/Product2/fields/Assembly_Site__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Site__c</fullName>
    <description>Amkor Specific Assembly Site</description>
    <inlineHelpText>Amkor Specific Assembly Site</inlineHelpText>
    <label>Assembly Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATK</fullName>
            </value>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>TDK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>