force-app/main/default/objects/Product2/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tashang</fullName>
            </value>
            <value>
                <fullName>u-blox</fullName>
                <default>true</default>
                <label>u-blox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>