force-app/main/default/objects/Product2/fields/Chip__c.field-meta.xml
<CustomField>
    <fullName>Chip__c</fullName>
    <label>Chip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>