force-app/main/default/objects/Product2/fields/Chip_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Chip_Supplier__c</fullName>
    <label>Chip Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chip_Supplier</valueSetName>
    </valueSet>
</CustomField>