force-app/main/default/objects/Product2/fields/Chipset_Cost__c.field-meta.xml
<CustomField>
    <fullName>Chipset_Cost__c</fullName>
    <inlineHelpText>(From Abacus) Loaded from Abacus on a daily basis</inlineHelpText>
    <label>Chipset Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>