force-app/main/default/objects/Product2/fields/COGS_1__c.field-meta.xml
<CustomField>
    <fullName>COGS_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cost of goods sold in USD</description>
    <inlineHelpText>Cost of goods sold in USD</inlineHelpText>
    <label>COGS 1</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>