force-app/main/default/objects/Product2/fields/COGS_CHF__c.field-meta.xml
<CustomField>
    <fullName>COGS_CHF__c</fullName>
    <formula>COGS_1__c * $User.USDtoCHF__c</formula>
    <inlineHelpText>COGS converted to CHF at current exchange rate</inlineHelpText>
    <label>COGS CHF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>