force-app/main/default/objects/Product2/fields/COGS_EUR__c.field-meta.xml
<CustomField>
    <fullName>COGS_EUR__c</fullName>
    <formula>COGS_1__c * $User.USDtoEUR__c</formula>
    <inlineHelpText>Cost in Euro. Calculated from COGS and exchange rate for the current month.</inlineHelpText>
    <label>COGS EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>