force-app/main/default/objects/Product2/fields/COGS_JPY__c.field-meta.xml
<CustomField>
    <fullName>COGS_JPY__c</fullName>
    <formula>COGS_1__c  *  $User.USDtoJPY__c</formula>
    <inlineHelpText>Cost in Yen. Calculated from COGS and exchange rate for the current month.</inlineHelpText>
    <label>COGS JPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>