force-app/main/default/objects/Product2/fields/COGS_Pct__c.field-meta.xml
<CustomField>
    <fullName>COGS_Pct__c</fullName>
    <inlineHelpText>Cost of goods sold as a percentage of the sales price. Added to COGS.</inlineHelpText>
    <label>COGS Pct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>