force-app/main/default/objects/Product2/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment on update of product schedule.</description>
    <inlineHelpText>Comment on update of product schedule.</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>