force-app/main/default/objects/Product2/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Cost Center to be imported from Abacus</description>
    <inlineHelpText>(From Abacus) Cost Center</inlineHelpText>
    <label>Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>