force-app/main/default/objects/Product2/fields/Custom_ordering_code__c.field-meta.xml
<CustomField>
    <fullName>Custom_ordering_code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ordering Code that is unique for a specific customer</description>
    <inlineHelpText>Ordering Code that is unique for a specific customer</inlineHelpText>
    <label>Custom ordering code</label>
    <type>Checkbox</type>
</CustomField>