force-app/main/default/objects/Product2/fields/DS_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Availability_Date__c</fullName>
    <description>Date when 1st datasheet becomes available</description>
    <inlineHelpText>Date when 1st datasheet becomes available</inlineHelpText>
    <label>DS Availability Date</label>
    <type>Date</type>
</CustomField>