force-app/main/default/objects/Product2/fields/ES_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>ES_Availability_Date__c</fullName>
    <description>Date when parts are planned to be available at u-blox Thalwil or regional office</description>
    <inlineHelpText>Date when parts are planned to be available at u-blox Thalwil or regional office</inlineHelpText>
    <label>ES Availability Date</label>
    <type>Date</type>
</CustomField>