force-app/main/default/objects/Product2/fields/ES_Under_Allocation__c.field-meta.xml
<CustomField>
    <fullName>ES_Under_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag set until product reach IP or if enough ES available (e.g. in case IP delayed)</description>
    <inlineHelpText>Flag set until product reach IP or if enough ES available (e.g. in case IP delayed)</inlineHelpText>
    <label>ES Under Allocation</label>
    <type>Checkbox</type>
</CustomField>