force-app/main/default/objects/Product2/fields/From_Abacus__c.field-meta.xml
<CustomField>
    <fullName>From_Abacus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>From Abacus</label>
    <type>Checkbox</type>
</CustomField>