force-app/main/default/objects/Product2/fields/IPR__c.field-meta.xml
<CustomField>
    <fullName>IPR__c</fullName>
    <inlineHelpText>(From Abacus) IPR class (20=2G, 30=3G, 40=LTE single, 41=LTE dual)</inlineHelpText>
    <label>IPR</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>