force-app/main/default/objects/Product2/fields/IPR_Checked__c.field-meta.xml
<CustomField>
    <fullName>IPR_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked by Product Owner once confirmed that IPR Class and IPR Cost fields are correct.</description>
    <inlineHelpText>To be checked by Product Owner once confirmed that IPR Class and IPR Cost fields are correct.</inlineHelpText>
    <label>IPR Checked</label>
    <type>Checkbox</type>
</CustomField>