force-app/main/default/objects/Product2/fields/IPR_Cost__c.field-meta.xml
<CustomField>
    <fullName>IPR_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IPR cost in detail, used to update IPR USD xxx and IPR Pct xxx fields. Populated when IPR Technology picklist field is changed (using Process and Workflow)</description>
    <inlineHelpText>IPR cost in detail, used to update IPR USD xxx and IPR Pct xxx fields. Populated when IPR Technology picklist field is changed</inlineHelpText>
    <label>IPR Cost</label>
    <referenceTo>IPR_Cost__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>