force-app/main/default/objects/Product2/fields/IPR_Pct_Consumer__c.field-meta.xml
<CustomField>
    <fullName>IPR_Pct_Consumer__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value copied from IPR Cost</description>
    <inlineHelpText>Value copied from IPR Cost</inlineHelpText>
    <label>IPR Pct Consumer</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>