force-app/main/default/objects/Product2/fields/IPR_Pct_PCUSB__c.field-meta.xml
<CustomField>
    <fullName>IPR_Pct_PCUSB__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IPR Pct PCUSB</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>