force-app/main/default/objects/Product2/fields/IPR_Pct_Prime__c.field-meta.xml
<CustomField>
    <fullName>IPR_Pct_Prime__c</fullName>
    <label>IPR Pct Prime</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>