force-app/main/default/objects/Product2/fields/IPR_USD_Laptop__c.field-meta.xml
<CustomField>
    <fullName>IPR_USD_Laptop__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Value copied from IPR Cost</inlineHelpText>
    <label>IPR USD Laptop</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>