force-app/main/default/objects/Product2/fields/IPR_USD_PCUSB__c.field-meta.xml
<CustomField>
    <fullName>IPR_USD_PCUSB__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IPR USD PCUSB</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>