force-app/main/default/objects/Product2/fields/IPR_USD_Prime__c.field-meta.xml
<CustomField>
    <fullName>IPR_USD_Prime__c</fullName>
    <label>IPR USD Prime</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>