force-app/main/default/objects/Product2/fields/Logistics__c.field-meta.xml
<CustomField>
    <fullName>Logistics__c</fullName>
    <description>Stocking type: Maintained by u-blox with the goal to ensure turn business. Only products in status IP or MP can be stocking types (to be checked in the product consistency reports 
Non-stocking type: Product is only produced upon receipt of an order. Products in EOL are automatically none-stocking types. 
Customer product: It is automatically Non-stocking type. Custom products are not visible to distributors.</description>
    <inlineHelpText>Stocking type: Maintained by u-blox. (Only products in status IP or MP) 
Non-stocking type: Product is only produced upon receipt of an order. 
Custom product: This is also Non-stocking type. Not visible to distributors.</inlineHelpText>
    <label>Logistics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stocking type</fullName>
            </value>
            <value>
                <fullName>Non-stocking type</fullName>
            </value>
            <value>
                <fullName>Custom product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>