force-app/main/default/objects/Product2/fields/Manual_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Availability_Date__c</fullName>
    <description>Date when 1st set of manuals (SIM/HIM and protocol spec.) becomes available</description>
    <inlineHelpText>Date when 1st set of manuals (SIM/HIM and protocol spec.) becomes available</inlineHelpText>
    <label>Manual Availability Date</label>
    <type>Date</type>
</CustomField>