force-app/main/default/objects/Product2/fields/MAP_pricing__c.field-meta.xml
<CustomField>
    <fullName>MAP_pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this product should be part of the MAP Export</description>
    <inlineHelpText>Check if this product should be part of the MAP Export</inlineHelpText>
    <label>MAP Pricing</label>
    <type>Checkbox</type>
</CustomField>