force-app/main/default/objects/Product2/fields/Marketing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cost__c</fullName>
    <formula>IF(  ISPICKVAL( Product_Center__c , &quot;Cellular&quot;) ,  COGS_CHF__c * 1.2, COGS_CHF__c * 1.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>